# taro-doctor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  index.ts  js-binding.d.ts  js-binding.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
assets/: config_schema.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/validators/: common.rs  config.rs  config_schema.json  env.rs  message.rs  mod.rs  package.rs  recommend.rs
