[package]
edition = "2021"
name = "tarojs_doctor"
version = "0.0.3"
include = ["assets/**"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
  "napi4",
  "serde-json",
  "async"
] }
napi-derive = { version = "2", default-features = false }

serde_json = "1.0"
jsonschema = "0.17"
emojis = "0.6.0"
console = "0.15.7"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["native-tls-vendored"] }
tokio = "1.28.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
